<resources>
    <string name="app_name">Book Hub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_app_fragment">About App Fragment</string>
    <string name="name">Name</string>
    <string name="pratiksha_kore">Pratiksha Kore</string>
    <string name="bio">Bio</string>
    <string name="tarvelling_in_my_mind">Tarvelling in my mind</string>
    <string name="phone">Phone</string>
    <string name="_4242424242">4242424242</string>
    <string name="email">Email</string>
    <string name="pratzk_bookhub_com">pratzk@bookhub.com</string>
    <string name="city">City</string>
    <string name="mumbai_india">Mumbai, India</string>
    <string name="list_item">List Item</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="rs_299">Rs. 299</string>
    <string name="_4_5">4.5</string>
    <string name="check_internet">Check Internet</string>
    <string name="about_the_book">About the Book:</string>
    <string name="blank_fragment">Blank Fragment</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="hello_world">Hello World</string>
    <string name="android_inc">Android Inc.</string>
    <string name="action_sort">Action Sort</string>
    <string name="about_app_text">This app was built by Ms. Pratiksha D. Kore as a first step into the Android Application Development world.</string>
</resources>