<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:background="#ffffff"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/imgBookImage"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1.5"
            android:padding="5dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"
            android:src="@drawable/book_app_icon_web" />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3">


            <TextView
                android:id="@+id/txtBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/name_of_the_book"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtBookName"
                android:padding="8dp"
                android:text="@string/name_of_the_author"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtBookPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtBookAuthor"
                android:layout_alignParentBottom="true"
                android:padding="8dp"
                android:text="@string/rs_299"
                android:textColor="#FF357a38"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txtBookRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:drawablePadding="4dp"
            android:padding="4dp"
            android:text="@string/_4_5"
            android:textColor="#ffca28"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_rating" />

    </LinearLayout>

</androidx.cardview.widget.CardView>