<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.DescriptionActivity"
    android:backgroundTint="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/descriptionPageToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/descriptionPageToolbar"
        android:layout_margin="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linLayContent"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/imgDescBookImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">

                    <TextView
                        android:id="@+id/txtDesBookName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/name_of_the_book"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtDesBookAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtDesBookName"
                        android:padding="8dp"
                        android:text="@string/name_of_the_author"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtDesBookPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtDesBookAuthor"
                        android:padding="8dp"
                        android:text="@string/rs_299"
                        android:textColor="#2E7D32"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/txtDesBookRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:drawableLeft="@drawable/ic_rating"
                    android:drawablePadding="4dp"
                    android:padding="4dp"
                    android:text="@string/_4_5"
                    android:textColor="#ffc828"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/linLayContent">

                <TextView
                    android:id="@+id/txtAboutTheBookStatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:padding="4dp"
                    android:text="@string/about_the_book"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtBookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtAboutTheBookStatic"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="32dp"
                    android:padding="4dp"
                    android:text="@string/blank_fragment"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/design_default_color_primary"
        android:text="@string/add_to_favourites"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/descProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/descProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>