<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    android:layout_gravity="center_horizontal"
    android:layout_margin="4dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:id="@+id/linLayFavPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="11">

        <ImageView
            android:id="@+id/imgFavBookImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="#f5f5f5"
            android:scaleType="fitCenter"
            android:src="@drawable/default_book_cover" />


        <TextView
            android:id="@+id/txtFavBookName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:padding="4dp"
            android:text="@string/hello_world"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#f5f5f5" />

        <TextView
            android:id="@+id/txtFavBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:padding="4dp"
            android:text="@string/android_inc"
            android:textAlignment="center"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#f5f5f5" />

        <TextView
            android:id="@+id/txtFavBookPrice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:padding="4dp"
            android:text="@string/rs_299"
            android:textColor="@color/price_green"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#f5f5f5" />

        <TextView
            android:id="@+id/txtFavBookRating"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            app:drawableLeftCompat="@drawable/ic_rating"
            android:drawablePadding="4dp"
            android:padding="4dp"
            android:text="@string/_4_5"
            android:textColor="@color/rating_yellow"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textStyle="bold"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>